@@ -233,6 +233,8 @@ Common.ErrorDialog.detailsButton=Details...
 Common.ErrorDialog.detailsTitle=Error Details
 Common.ErrorDialog.contactPhet=If this problem persists, send the details below to {0}
 
+Common.phetInstaller=PhET Offline Website Installer
+
 #For additional common packages
 chart-time-control.go=Go!
 timeseries.control.panel.playback=Playback
