@@ -3,15 +3,16 @@ package edu.colorado.phet.common.phetcommon.updates;
 import java.awt.Frame;
 
 import javax.swing.JDialog;
-import javax.swing.JOptionPane;
 import javax.swing.SwingUtilities;
 
 import edu.colorado.phet.common.phetcommon.application.ISimInfo;
 import edu.colorado.phet.common.phetcommon.application.PhetApplication;
-import edu.colorado.phet.common.phetcommon.application.PhetInfoQuery;
-import edu.colorado.phet.common.phetcommon.application.PhetInfoQuery.PhetInfoQueryResult;
+import edu.colorado.phet.common.phetcommon.application.VersionInfoQuery;
+import edu.colorado.phet.common.phetcommon.application.VersionInfoQuery.VersionInfoQueryResponse;
+import edu.colorado.phet.common.phetcommon.resources.PhetInstallerVersion;
 import edu.colorado.phet.common.phetcommon.updates.dialogs.InstallerManualUpdateDialog;
 import edu.colorado.phet.common.phetcommon.updates.dialogs.UpdateErrorDialog;
+import edu.colorado.phet.common.phetcommon.updates.dialogs.NoUpdateDialog.InstallerNoUpdateDialog;
 
 /**
  * Handles manual requests for update checks.
@@ -23,12 +24,10 @@ public class ManualUpdatesManager {
     
     private static ManualUpdatesManager instance;
     
-    private final ISimInfo simInfo;
-    private Frame frame;
+    private final PhetApplication app;
     
     private ManualUpdatesManager( PhetApplication app ) {
-        this.frame = app.getPhetFrame();
-        this.simInfo = app.getSimInfo();
+        this.app = app;
     }
     
     public static ManualUpdatesManager initInstance( PhetApplication app ) {
@@ -45,49 +44,60 @@ public class ManualUpdatesManager {
 
     public void checkForSimUpdates() {
         
-        final long currentPhetInstallationTimestamp = 0; //TODO get this from phet-installation.properties
-        final PhetInfoQuery query = new PhetInfoQuery( simInfo.getProjectName(), simInfo.getFlavor(), simInfo.getVersion(), currentPhetInstallationTimestamp );
-        query.addListener( new PhetInfoQuery.Listener() {
-            public void queryDone( final PhetInfoQueryResult result ) {
+        final PhetInstallerVersion currentInstallerVersion = new PhetInstallerVersion( 0 ); // don't care, since this query is for the sim
+        ISimInfo simInfo = app.getSimInfo();
+        final Frame parentFrame = app.getPhetFrame();
+        
+        final VersionInfoQuery query = new VersionInfoQuery( simInfo.getProjectName(), simInfo.getFlavor(), simInfo.getVersion(), currentInstallerVersion );
+        query.addListener( new VersionInfoQuery.VersionInfoQueryListener() {
+            
+            public void done( final VersionInfoQueryResponse result ) {
                 SwingUtilities.invokeLater( new Runnable() {
                     public void run() {
                         if ( result.isInstallerUpdateRecommended() ) {
-                            new InstallerManualUpdateDialog( frame ).setVisible( true );
+                            new InstallerManualUpdateDialog( parentFrame ).setVisible( true );
                         }
                     }
                 } );
             }
             
             public void exception( Exception e ) {
-                JDialog dialog = new UpdateErrorDialog( frame, e );
+                JDialog dialog = new UpdateErrorDialog( parentFrame, e );
                 dialog.setVisible( true );
             }
         });
-        query.start();
+        query.send();
     }
     
     public void checkForInstallerUpdates() {
-        final long currentPhetInstallationTimestamp = 0; //TODO get this from phet-installation.properties
-        final PhetInfoQuery query = new PhetInfoQuery( simInfo.getProjectName(), simInfo.getFlavor(), simInfo.getVersion(), currentPhetInstallationTimestamp );
-        query.addListener( new PhetInfoQuery.Listener() {
-            public void queryDone( final PhetInfoQueryResult result ) {
+        
+        final PhetInstallerVersion currentInstallerVersion = new PhetInstallerVersion( 0 ); //TODO get this from phet-installation.properties
+        ISimInfo simInfo = app.getSimInfo();
+        final Frame parentFrame = app.getPhetFrame();
+        
+        final VersionInfoQuery query = new VersionInfoQuery( simInfo.getProjectName(), simInfo.getFlavor(), simInfo.getVersion(), currentInstallerVersion );
+        query.addListener( new VersionInfoQuery.VersionInfoQueryListener() {
+            
+            public void done( final VersionInfoQueryResponse result ) {
                 SwingUtilities.invokeLater( new Runnable() {
                     public void run() {
                         if ( result.isInstallerUpdateRecommended() ) {
-                            new InstallerManualUpdateDialog( frame ).setVisible( true );
+                            new InstallerManualUpdateDialog( parentFrame ).setVisible( true );
                         }
                         else {
-                            JOptionPane.showMessageDialog( frame, "No update for you." );//TODO make a real dialog
+                            new InstallerNoUpdateDialog( parentFrame, currentInstallerVersion ).setVisible( true );
                         }
                     }
                 } );
             }
             
             public void exception( Exception e ) {
-                JDialog dialog = new UpdateErrorDialog( frame, e );
+                JDialog dialog = new UpdateErrorDialog( parentFrame, e );
                 dialog.setVisible( true );
             }
         });
-        query.start();
+        
+        // OK that this blocks, since the user initiated the request
+        query.send();
     }
 }
